Testing Github editor
This is the optional extended commit description. Where does this display when done?

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="../j/project-hub.js"></script>
     
+    <!-- This is a test of the Github browser-based editor -->
+    
 
 </body>
 </html>
